tests/neg/enum-variance.check
-- Error: tests/neg/enum-variance.scala:4:12 ---------------------------------------------------------------------------
4 |  case Refl(f: T => T) // error: enum case Refl requires explicit declaration of type T
  |            ^^^^^^^^^
  |        contravariant type T occurs in covariant position in type T => T of value f
  |        enum case Refl requires explicit declaration of type T to resolve this issue.
  |        See an example at https://docs.scala-lang.org/scala3/reference/enums/adts.html#parameter-variance-of-enums
-- Error: tests/neg/enum-variance.scala:7:16 ---------------------------------------------------------------------------
7 |  case Refl[-T](f: T => T) extends ExplicitView[T] // error: contravariant type T occurs in covariant position
  |                ^^^^^^^^^
  |                contravariant type T occurs in covariant position in type T => T of value f
